{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 57,
  "lineage": "99d70007-1a28-64fe-569c-a23db2571c02",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495219733354:internet-gateway/igw-0a10d28e0d1ffa8db",
            "id": "igw-0a10d28e0d1ffa8db",
            "owner_id": "495219733354",
            "region": "us-east-1",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-0cb1a47097251debd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495219733354:route-table/rtb-0f28b6e32cbf150ec",
            "id": "rtb-0f28b6e32cbf150ec",
            "owner_id": "495219733354",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a10d28e0d1ffa8db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb1a47097251debd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495219733354",
            "id": "rtb-0f28b6e32cbf150ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new_rtb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c367abc8a495092a",
            "region": "us-east-1",
            "route_table_id": "rtb-0f28b6e32cbf150ec",
            "subnet_id": "subnet-079e24523ef026837"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new_rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ad14908dd7cad0",
            "region": "us-east-1",
            "route_table_id": "rtb-0f28b6e32cbf150ec",
            "subnet_id": "subnet-0f0616e275bf3db2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new_rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495219733354:security-group/sg-09c6d8dbb895e11e6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c6d8dbb895e11e6",
            "ingress": [],
            "name": "terraform-20260319014029813600000001",
            "name_prefix": "terraform-",
            "owner_id": "495219733354",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb1a47097251debd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495219733354",
            "id": "sg-09c6d8dbb895e11e6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495219733354:subnet/subnet-079e24523ef026837",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079e24523ef026837",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495219733354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-0cb1a47097251debd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495219733354",
            "id": "subnet-079e24523ef026837",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495219733354:subnet/subnet-0f0616e275bf3db2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0616e275bf3db2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495219733354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fullcycle-subnet-2"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-2"
            },
            "vpc_id": "vpc-0cb1a47097251debd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495219733354",
            "id": "subnet-0f0616e275bf3db2f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495219733354:vpc/vpc-0cb1a47097251debd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ad00ad615207185",
            "default_route_table_id": "rtb-017f42223615efe55",
            "default_security_group_id": "sg-0abd909eca2a808fa",
            "dhcp_options_id": "dopt-0a14aec2c54feb9ff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb1a47097251debd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017f42223615efe55",
            "owner_id": "495219733354",
            "region": "us-east-1",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495219733354",
            "id": "vpc-0cb1a47097251debd",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}